# lesspdf

./: .gitignore  LICENSE  ci.sh  pyproject.toml  word-list.txt
.github/workflows/: ci.yaml  demo.yml
src/lesspdf/: __init__.py  application.py  cli.py  document.py
tests/: test_application.py  test_cli.py  test_document.py
