[project]
name = "lesspdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7", "pillow>=10.4.0", "pymupdf>=1.24.11", "term-image>=0.7.2"]

[project.scripts]
lesspdf = "lesspdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["mypy>=1.11.2", "pytest-coverage>=0.0", "pytest>=8.3.3"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = false

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]
