[project]
name = "lesspdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click~=8.1", "pillow~=11.0", "pymupdf~=1.24", "pytest-cov~=6.0", "term-image~=0.7"]

[project.scripts]
lesspdf = "lesspdf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["deptry~=0.21", "mypy~=1.13", "pytest-timeout~=2.3", "pytest~=8.3", "ruff~=0.8"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = false

select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "COM",   # flake8-commas
    "D",     # PyDocStyle
    "DTZ",   # flake8-datetimez
    "E4",    # pycodestyle: imports
    "E7",    # pycodestyle: various
    "E9",    # pycodestyle: more various?
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "F",     # PyFlakes
    "FBT",   # flake8-boolean-trap
    "FLY",   # flynt
    "FURB",  # refurb
    "G",     # flake8-logging-format
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "INT",   # flake8-gettext
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # PEP8 Naming
    "PERF",  # perflint
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff specifc rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "SLOT",  # flake8-slot
    "RUF",   # ruff specifc rules
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # Pycodestyle warnings
    "YTT",   # flake8-2020
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["D104"]

[tool.pytest.ini_options]
addopts = "--cov=lesspdf --cov-report=term-missing --cov-report=xml --cov-fail-under=77 --cov-branch"

[tool.deptry]
known_first_party = ["lesspdf"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest-cov"]
